# opengl

./: CMakeLists.txt
dependencies/glad/: glad.h
shaders/: default.frag  default.vert
src/: EBO.cpp  EBO.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  config.h  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
